--- a/Servlet/.settings/org.eclipse.wst.common.component
+++ b/Servlet/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+        
     <wb-module deploy-name="Servlet">
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <dependent-module archiveName="Web_fragment_Demo.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Web_fragment_Demo/Web_fragment_Demo">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+                
         <property name="context-root" value="Servlet"/>
+                
         <property name="java-output-path" value="/Servlet/build/classes"/>
+            
     </wb-module>
+    
 </project-modules>
